--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Nsh-uB-I6M">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XVj-hn-pQZ">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -94,7 +95,23 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1844" y="-273"/>
+            <point key="canvasLocation" x="2770.2290076335876" y="-273.23943661971833"/>
+        </scene>
+        <!--AuthViewController-->
+        <scene sceneID="3gf-sW-sPG">
+            <objects>
+                <viewController id="PPt-Sa-hp1" userLabel="AuthViewController" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cNo-Oz-bhB">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="erO-1X-AdC"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="aWB-kX-ShG"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NgV-8r-Bkj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-170" y="-229"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="MVV-Zb-ODF">
@@ -117,7 +134,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QfZ-fe-Eoj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1066.4122137404579" y="-2.1126760563380285"/>
+            <point key="canvasLocation" x="1993.1297709923663" y="-2.1126760563380285"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="Prw-oN-cmb">
@@ -126,78 +143,17 @@
                     <view key="view" contentMode="scaleToFill" id="0MT-8U-nHH">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Екатерина Новикова" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="91V-vq-pZu" userLabel="profileName">
-                                <rect key="frame" x="16" y="169" width="217" height="28"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                <color key="textColor" name="YPWhite"/>
-                                <color key="highlightedColor" name="YPBlack"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="@ekaterina_nov" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SaT-HT-fBx" userLabel="profileNickName">
-                                <rect key="frame" x="16" y="195" width="200" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <color key="textColor" name="YPGray"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Hello, world!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nlE-si-l2B" userLabel="profileDescription">
-                                <rect key="frame" x="16" y="221" width="94" height="18"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <color key="textColor" name="YPWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ekaterina" translatesAutoresizingMaskIntoConstraints="NO" id="eXS-8J-YgL" userLabel="profilePhoto">
-                                <rect key="frame" x="16" y="91" width="70" height="70"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="70" id="8Qz-pJ-We9"/>
-                                    <constraint firstAttribute="height" constant="70" id="aII-yn-JBy"/>
-                                </constraints>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CnN-vb-xIc" userLabel="exitButton">
-                                <rect key="frame" x="345" y="114" width="24" height="24"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" image="exitButton">
-                                    <color key="titleColor" name="YPRed"/>
-                                </state>
-                                <buttonConfiguration key="configuration" style="plain" image="exitButton"/>
-                            </button>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="YZk-ky-pwM"/>
                         <color key="backgroundColor" name="YPBlack"/>
-                        <constraints>
-                            <constraint firstItem="nlE-si-l2B" firstAttribute="leading" secondItem="91V-vq-pZu" secondAttribute="leading" id="8UV-KZ-Q8H"/>
-                            <constraint firstItem="91V-vq-pZu" firstAttribute="leading" secondItem="YZk-ky-pwM" secondAttribute="leading" constant="16" id="EIG-XG-it0"/>
-                            <constraint firstItem="91V-vq-pZu" firstAttribute="leading" secondItem="eXS-8J-YgL" secondAttribute="leading" id="F9j-gq-ub7"/>
-                            <constraint firstItem="CnN-vb-xIc" firstAttribute="top" secondItem="YZk-ky-pwM" secondAttribute="top" constant="55" id="KFz-rS-LUh"/>
-                            <constraint firstItem="eXS-8J-YgL" firstAttribute="leading" secondItem="YZk-ky-pwM" secondAttribute="leading" constant="16" id="Lqb-qQ-QU0"/>
-                            <constraint firstItem="eXS-8J-YgL" firstAttribute="top" secondItem="YZk-ky-pwM" secondAttribute="top" constant="32" id="ORz-1N-X0c"/>
-                            <constraint firstItem="SaT-HT-fBx" firstAttribute="top" secondItem="91V-vq-pZu" secondAttribute="bottom" constant="8" id="Rsc-3v-scx"/>
-                            <constraint firstItem="SaT-HT-fBx" firstAttribute="leading" secondItem="91V-vq-pZu" secondAttribute="leading" id="SdL-9R-OWl"/>
-                            <constraint firstItem="YZk-ky-pwM" firstAttribute="trailing" secondItem="CnN-vb-xIc" secondAttribute="trailing" constant="24" id="Vnd-tN-Fnj"/>
-                            <constraint firstItem="91V-vq-pZu" firstAttribute="top" secondItem="eXS-8J-YgL" secondAttribute="bottom" constant="8" id="b9d-ow-KJJ"/>
-                            <constraint firstItem="SaT-HT-fBx" firstAttribute="leading" secondItem="YZk-ky-pwM" secondAttribute="leading" constant="16" id="grJ-AO-ndP"/>
-                            <constraint firstItem="nlE-si-l2B" firstAttribute="leading" secondItem="YZk-ky-pwM" secondAttribute="leading" constant="16" id="gvX-rP-cLL"/>
-                            <constraint firstItem="SaT-HT-fBx" firstAttribute="trailing" secondItem="91V-vq-pZu" secondAttribute="trailing" id="h6U-6B-UUu"/>
-                            <constraint firstItem="nlE-si-l2B" firstAttribute="top" secondItem="SaT-HT-fBx" secondAttribute="bottom" constant="8" id="mzP-U7-cOX"/>
-                            <constraint firstItem="CnN-vb-xIc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="eXS-8J-YgL" secondAttribute="trailing" id="rNe-oG-3bt"/>
-                            <constraint firstItem="YZk-ky-pwM" firstAttribute="trailing" secondItem="91V-vq-pZu" secondAttribute="trailing" constant="15" id="wEP-OY-p2v"/>
-                            <constraint firstItem="nlE-si-l2B" firstAttribute="trailing" secondItem="91V-vq-pZu" secondAttribute="trailing" id="wq0-NU-pST"/>
-                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="profileNoActive" id="Hdj-02-UcM">
                         <color key="badgeColor" name="YPBlack"/>
                     </tabBarItem>
                     <navigationItem key="navigationItem" id="BP9-X8-yoJ"/>
-                    <connections>
-                        <outlet property="exitButton" destination="CnN-vb-xIc" id="Jh9-53-2tx"/>
-                        <outlet property="profileDescription" destination="nlE-si-l2B" id="7eP-YD-GMo"/>
-                        <outlet property="profileName" destination="91V-vq-pZu" id="K9l-ce-0Oh"/>
-                        <outlet property="profileNickName" destination="SaT-HT-fBx" id="cGy-kp-OnK"/>
-                        <outlet property="profilePhoto" destination="eXS-8J-YgL" id="Bs0-YC-yxN"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a9E-8I-vgQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1843.5114503816794" y="517.6056338028169"/>
+            <point key="canvasLocation" x="2790" y="471"/>
         </scene>
         <!--Single Image View Controller-->
         <scene sceneID="mUq-w9-lZU">
@@ -272,14 +228,47 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qv9-4e-Iph" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3032.8244274809158" y="-273.23943661971833"/>
+            <point key="canvasLocation" x="3959.5419847328244" y="-273.23943661971833"/>
+        </scene>
+        <!--Web View View Controller-->
+        <scene sceneID="lGB-PC-cKx">
+            <objects>
+                <viewController id="ega-0g-PQa" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GAM-rd-zc2">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="KWG-Eo-dhm"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="zk4-zm-NOX"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PWV-XI-hNB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="700" y="-530"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="MWS-Ao-Azh">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="XVj-hn-pQZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="MB2-R3-taL">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="PPt-Sa-hp1" kind="relationship" relationship="rootViewController" id="TZM-jn-ODT"/>
+                        <segue destination="ega-0g-PQa" kind="show" identifier="showWebView" id="V7K-ee-Z4G"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PM9-PK-mc9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-934" y="-203"/>
         </scene>
     </scenes>
     <resources>
         <image name="0" width="200" height="132"/>
         <image name="Backward" width="24" height="24"/>
-        <image name="ekaterina" width="70" height="70"/>
-        <image name="exitButton" width="24" height="24"/>
         <image name="likeOn" width="42" height="42"/>
         <image name="mainNoActive" width="30" height="30"/>
         <image name="profileNoActive" width="30" height="30"/>
@@ -287,14 +276,11 @@
         <namedColor name="YPBlack">
             <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="YPGray">
-            <color red="0.68199998140335083" green="0.68599998950958252" blue="0.70599997043609619" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="YPRed">
-            <color red="0.96100002527236938" green="0.41999998688697815" blue="0.42399999499320984" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="YPWhite">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
