--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -109,7 +109,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="aWB-kX-ShG"/>
                     <connections>
-                        <segue destination="ega-0g-PQa" kind="presentation" identifier="showWebView" id="lOG-rW-mMf"/>
+                        <segue destination="ega-0g-PQa" kind="show" identifier="showWebView" id="lOG-rW-mMf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NgV-8r-Bkj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -238,7 +238,7 @@
             <objects>
                 <viewController id="ega-0g-PQa" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="GAM-rd-zc2">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="KWG-Eo-dhm"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -247,7 +247,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PWV-XI-hNB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="697" y="-383"/>
+            <point key="canvasLocation" x="596" y="-394"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="MWS-Ao-Azh">
